--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Dokumentation av dethär APIet</h1>
     <br>
     <h2>Routs</h2>
-    <p>GET/users - returnerar alla användare</p>
-    <p>GET/users/{id} - returnerar en användare med specifikt id</p>
-    <p>POST/users - skapar en ny användare och accepterar JSON object på formatet {"username", "password"}</p>
-    <p>PUT/users/{id} - ändrar en befintlig användare med specifikt id och accepterar JSON object med formatet {"username", "password"}</p>
+    <p>🔒 GET/users - returnerar alla användare</p>
+    <p>🔒 GET/users/{id} - returnerar en användare med specifikt id</p>
+    <p>🔒 POST/users - skapar en ny användare och accepterar JSON object på formatet {"username", "password"}</p>
+    <p>🔒 PUT/users/{id} - ändrar en befintlig användare med specifikt id och accepterar JSON object med formatet {"username", "password"}</p>
     <p>POST/login - tar JSON object med formatet {"username", "password"} och jämför det med databasen, om en användare med samma username och password hittas skickas ett fint välkomsmeddelande</p>
-
+    <p>🔒 = kräver en giltig bearer token i authorization header</p>
 </body>
 </html>
